# Knowledge-assist

./: .env.example  .gitignore  Dockerfile  index.html  main.py  package.json  playwright.config.js
PZF-Main-main/: main.py  (+2 more)
backend/: .gitignore  Dockerfile  README.md  common_questions_structured 1.csv  delete_firebase.py  deploy.sh  docker-compose.yml  index_metadata.json  main.py  pyproject.toml  setup.sh  task.md  walkthrough.md
backend/configs/: __init__.py  settings.py
backend/configs/secrets/: .env.example
backend/data/opp_id_1/raw/documents/: NovaPulse_Data.xlsx
backend/data/opp_id_1/raw/gmail/: gmail_metadata.json
backend/data/opp_id_1/raw/slack/: slack_metadata.json
backend/data/opp_id_1/raw/zoom/: NovaPulse_Call_01_Discovery_ProductFeatures.vtt  NovaPulse_Call_02_Pricing_Competitive_ROI.vtt  NovaPulse_Call_03_TechnicalDeepDive_Security_Legal.vtt
backend/data/opp_id_2/raw/documents/: Veltrix_Data.xlsx
backend/data/opp_id_2/raw/gmail/: gmail_metadata.json
backend/data/opp_id_2/raw/slack/: slack_metadata.json
backend/data/opp_id_2/raw/zoom/: Veltrix_Call_01_Discovery_Modules_Pricing.vtt  Veltrix_Call_02_Security_GDPR_Compliance_Legal.vtt  Veltrix_Call_03_Competitive_ROI_Objections_PoC.vtt
backend/data/test/: README.md
backend/data/test/synthetic_slack_export_sample/: slack_metadata.json
backend/db/schema/modules/: 00_extensions.sql  10_users.sql  20_opportunities.sql  30_opportunity_sources.sql  35_opportunity_requests.sql  40_document_registry.sql  50_chunk_registry.sql  65_sase_questions.sql  80_answers.sql  85_answer_versions.sql  95_conflicts.sql  97_opportunity_question_answers.sql  98_feedback.sql  99_audit_log.sql  99_team_members.sql  99_teams.sql  README.md
backend/functions/: answer_generation.py  gcs_file_processor.py  pubsub_dispatch.py  rag_ingestion.py  rag_orchestrator.py
backend/scripts/: README.md  create_plugin_auth_tables.py  revoke_zoom_token.py  run-answer-generation.ps1  smoke_test_connectors.py  test_zoom_webhook.py  update_embedding.py
backend/scripts/db/: apply_modular_schema.py  check_schema_drift.py
backend/scripts/debug/: check_ingested_data.py  debug_retrieval_scores.py  inspect_registry_tables.py  view_pg_data.py
backend/scripts/migrations/: add_opportunity_pipeline_columns.sql  add_users_roles_assigned.sql  fix_empty_opportunity_id_strings.sql  reframe_sase_questions_and_prompts.sql
backend/scripts/setup/: setup_cloudsql_and_restore.py  setup_database.py
backend/scripts/tests_integration/: smoke_agent_batch_prompt.py  smoke_answer_gen_subset.py  smoke_answer_generation.py  smoke_answer_types_summary.py  smoke_connection_reuse.py  smoke_connectors_discover_and_sync.py  smoke_document_ai.py  smoke_document_deletion_flow.py  smoke_document_extraction.py  smoke_document_ingestion.sh  smoke_e2e_merge.py  smoke_gmail_oauth_and_gcs.py  smoke_ingestion_cloud_workflow.py  smoke_ingestion_pipeline.py  smoke_opportunity_answers.py  smoke_pre_xlsx_chunking.py  smoke_rag_deletion.py  smoke_rag_orchestrator.py  smoke_raw_cascade_delete.sh  smoke_reconciliation_retry.py  smoke_reingest_chunk_preservation.py  smoke_retrieval.py  smoke_single_question_answer.py  smoke_slack_summary.py
backend/scripts/tests_unit/: run_all_retry_smoke_tests.sh  smoke_retry_answer_generation.py  smoke_retry_embed_texts.py  smoke_retry_embedding.py  smoke_retry_pubsub.py  smoke_retry_reranking.py  smoke_retry_vector_search.py  smoke_retry_vertex_index.py
backend/scripts/utils/: backfill_question_embeddings.py  generate_llm_question_batches.py  json_to_excel.py  update_answer_text_and_embedding.py  upload_to_raw.sh  verify_ingestion_local.sh  vtt_preprocessing_chunking.py
backend/src/apis/routes/: admin_routes.py  auth_routes.py  drive_routes.py  gmail_routes.py  notifications_routes.py  onedrive_routes.py  opportunity_routes.py  slack_routes.py  sync_routes.py  team_routes.py  zoom_routes.py
backend/src/services/: __init__.py
backend/src/services/agent/: __init__.py  cache_manager.py  confidence.py  dependency.py  field_loader.py  form_output.py  graph.py  prompt_builder.py  state.py  supervisor.py  types.py  workers.py
backend/src/services/auth/: __init__.py  firebase_init.py
backend/src/services/database_manager/: __init__.py  answer_generation_lock.py  answers_legacy_unique.py  connection.py  operations.py  opportunity_state.py  orm.py  rag_data_service.py  registry.py  user_connection_utils.py
backend/src/services/database_manager/models/: auth_models.py
backend/src/services/document_ai/: __init__.py  client.py
backend/src/services/document_extraction/: service.py
backend/src/services/document_extraction/extractors/: __init__.py  spreadsheet.py
backend/src/services/gmail/: sync_service.py
backend/src/services/llm/: __init__.py  client.py
backend/src/services/notifications/: __init__.py  hub.py
backend/src/services/pipelines/: __init__.py  agent_pipeline.py  gcs_pipeline.py  ingestion_pipeline.py  pubsub_pipeline.py  rag_pipeline.py  retrieval_pipeline.py
backend/src/services/plugins/: drive_plugin.py  gmail_plugin.py  google_connector_user.py  oauth_service.py  onedrive_plugin.py  slack_plugin.py  zoom_plugin.py
backend/src/services/preprocessing/: __init__.py
backend/src/services/preprocessing/mail/: __init__.py  cleaner.py  deduplicator.py  formatter.py  models.py  preprocessor.py
backend/src/services/preprocessing/slack/: formatter.py  orchestrator.py  preprocessor.py  prompts.py  schemas.py
backend/src/services/preprocessing/zoom/: __init__.py  vtt.py
backend/src/services/pubsub/: __init__.py
backend/src/services/storage/: __init__.py  service.py
backend/src/services/vertex_index/: client.py
backend/src/services/zoom/: client.py  sync_service.py  webhook_handler.py
backend/src/utils/: crypto_utils.py  logger.py  retry.py
backend/tests/unit/agent/: test_form_output_conflict_contract.py
backend/tests/unit/db/: test_rag_data_service_helpers.py
backend/tests/unit/routes/: test_opportunity_routes_helpers.py  test_team_access_and_members.py
backend/workflows/: ingestion_pipeline.yaml
(+207 files in other folders)
